refactor(security): reorganize SecurityConfig for improved readability and maintainability